--- a/src/components/locales/kg/translation.json
+++ b/src/components/locales/kg/translation.json
@@ -2,8 +2,8 @@
   "mainWeeding": "Үйлөнүү той",
   "mainP": "Cизди биздин жашообуздагы эң маанилүү күндү биз менен бөлүшүүгө чакырабыз.",
   "mainAddress": "Дареги",
-  "contentHeadText": "Кадырлуу конок",
-  "contentText": "2024-жылдын 19-сентябрында биздин жашообуздагы эң маанилүү майрам – үйлөнүү үлпөт күнүбүз болоорун сиздерге кубануу менен билдиребиз! Сиздерди ушул унутулгус күндүн кубанычын биз менен бөлүшүүгө чакырабыз.",
+  "contentHeadText": "Кадырлуу коноктор",
+  "contentText": "Сиздерди  2024 - жылдын   19 - сентябрында уйлонуу тоюбузга арналган салтанат кечебизге келип , ак никебизге кубо болуп , ушул унутулгус кундун кубанычын биз менен болушууго чакырабыз !",
   "timingHead1": "Жаштык-автобус кечеси",
   "timing1": "Бардык жаш жана энергиялуу коноктор үчүн кызыктуу шаардык автобус.",
   "timingHead2": "«Супара» этно-комплексинде фуршет жана фотосессия",
@@ -18,7 +18,7 @@
   "hour": "Саат",
   "minutes": "Мүнөт",
   "seconds": "Секунда",
-  "addressText": "Биздин үйлөнүү үлпөтүбүз «Сухэ-Батора, 3/2» дарегиндеги Palazzo ресторанында болот.",
+  "addressText": "Биздин үйлөнүү үлпөт тоюбуз «Сухэ-Батора, 3/2» дарегиндеги Palazzo ресторанында болот.",
   "dresscodeText": "Биздин майрамдын стилин колдоп, кийим тандоодо палитрада сунушталган түстөрдү тандасаңыз, биз кубанычта болобуз.",
   "footerText": "Биз сизди чыдамсыздык менен күтөбүз!"
 }
